_media.scss
/* xs */

@media (max-width: 575px) {
  // positioning
  .row {
    display: flex;
  }
  .order-sidebar {
    order: 2;
    .col {
      padding: 0;
    }
  }
  .order-content {
    order: 1;
  }
  .slider-wrapper, .blog-wrapper, .blog-excerpts-wrraper {
    flex-wrap: wrap;
    flex-direction: column;
  }
  a.navbar-brand {
    padding: 0 0;
    margin-right: 0;
  }
  button.navbar-toggler{
    padding: 0.25rem 0;
  }
  div#navbarTogglerDemo02 {
    top: 9rem;
    padding-top: 0;
    background-color: rgba(254, 251, 244, 1);
    right: 0;

    .english:link,
    .english:visited {
      right: -7.4rem;
      top: -7.5rem;
      display: inline;
    }
    ul {
      background-color: rgba(254, 251, 244, 1);
      padding: 1rem 2rem 1rem 0;
      box-shadow: -4px 4px 5px 0px rgba(50, 50, 50, 0.247);
      padding-top: 0;
      li {
        text-transform: uppercase;
      }
    }
  }
  div.col-slider {
    margin-bottom: 3rem;
    div.carousel-inner {
      div.carousel-item {
        text-align: center;
        .slide-text {
          // padding: 1rem 2rem 1rem 0;
        }
      }
    }
    .carousel-control-prev-icon {
      left: 0;
    }
    .carousel-control-next-icon {
      right: 0;
    }
  }
  li.nav-item {
    padding-top: 1rem;
    padding-right: 2rem;
    padding-left: 1rem;
    a.nav-link {
      display: inline;
    }
  }
}


/* sm */

@media (min-width: 576px) and (max-width: 767px) {
  // positioning
  .row {
    display: flex;
  }
  .order-sidebar {
    order: 2;
    .col {
      padding: 0;
    }
  }
  .order-content {
    order: 1;
  }
  .slider-wrapper, .blog-wrapper, .blog-excerpts-wrraper {
    flex-wrap: wrap;
    flex-direction: column;
  }
  a.navbar-brand {
    padding: 0 0;
  }
  div#navbarTogglerDemo02 {
    right: 0.9rem;
    .english:link,
    .english:visited {
      right: -7.4rem;
      top: -3.5rem;
      display: inline;
    }
    ul {
      background-color: rgba(254, 251, 244, 1);
      padding: 1rem 2rem 1rem 0;
      box-shadow: -4px 4px 5px 0px rgba(50, 50, 50, 0.247);
      li {
        text-transform: uppercase;
      }
    }
  }
  div.col-slider {
    margin-bottom: 6rem;
    div.carousel-inner {
      div.carousel-item {
        text-align: center;
        .slide-text {
          background-color: rgba(254, 251, 244, 0.8);
        }
      }
    }
  }
  li.nav-item {
    padding-top: 1rem;
    padding-right: 2rem;
    padding-left: 1rem;
    a.nav-link {
      display: inline;
    }
  }
}


/* md */

@media (min-width: 768px) and (max-width: 991px) {
  .slider-wrapper, .blog-wrapper, .blog-excerpts-wrraper {
    flex-wrap: wrap;
  }
  a.navbar-brand {
    padding: 0 0;
  }
  div#navbarTogglerDemo02 {
    right: 0.9rem;
    .english:link,
    .english:visited {
      right: -7.4rem;
      top: -3.5rem;
      display: inline;
    }
    ul {
      background-color: rgba(254, 251, 244, 1);
      padding: 1rem 2rem 1rem 0;
      box-shadow: -4px 4px 5px 0px rgba(50, 50, 50, 0.247);
      li {
        text-transform: uppercase;
        padding-right: 2rem;
      }
    }
  }
  li.nav-item {
    padding-top: 1rem;
    padding-right: 2rem;
    padding-left: 1rem;
    a.nav-link {
      display: inline;
    }
  }
}


/* lg */

@media (min-width: 992px) and (max-width: 1199px) {
  a.navbar-brand {
    padding-left: 6rem;
  }
  div#navbarTogglerDemo02 {
    .english:link,
    .english:visited {
      right: -45.3rem;
    }
    ul {
      padding-right: 0;
      li {
        padding-left: 1rem;
      }
    }
  }
  li.nav-item {
    padding-top: 1rem;
    a.nav-link {
      display: inline;
    }
  }
}

